--- a/index.css
+++ b/index.css
@@ -1,5 +1,20 @@
 /* VARIABLES */
 :root {
+    --black: #000000; 
+    --white: #ffffff;
+    --middle-grey: #888888;
+    --light-grey: #D0D0D0;
+    --native-one: #01AF5A;
+    --native-two: #C9E518;
+    --native-three: #EBEE6D;
+    --native-four: #6AFBA4;
+    --native-five: #5DD8B3;
+    --native-six: #00CF08; 
+
+    --non-one: #315B51;
+    --non-two: #4C7345;
+    --non-three: #758C6A;
+    --non-four: #758C6A; 
 }
 
 
