--- a/index.css
+++ b/index.css
@@ -1,5 +1,15 @@
-.container{
-    display: flex;
-    flex-wrap: wrap;
-  }
+html,body{
+  width:100%;
+  height:100%;
+  padding:0;
+  margin:0;
+}
 
+#container{
+  font-size: 0;
+}
+
+.box {
+  display:inline-block;
+  background-color:grey;
+};
