--- a/main.css
+++ b/main.css
@@ -197,3 +197,71 @@ font-size: var(--filter-text-size);
 
 
 /* ANIMATIONS */
+
+
+/* MEDIA QUERIES / BREAKPOINTS */
+
+@media (max-width: 768px) {
+
+    :root {
+        --header-text-size: 20px;
+        --filter-text-size: 18px;
+        --body-text-size: 18px;
+    }
+
+    body { 
+        width: 85vw;
+        margin: 0 auto;
+    }
+
+    /* GENERAL STYLES */
+
+    .site-nav { 
+        margin: .75em 0em;
+    }
+
+    .filter-bar { 
+        position: fixed;
+        bottom: 1em;
+        left: 20vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start; 
+    
+    }
+
+}
+
+@media (max-width: 400px) {
+
+    :root {
+        --header-text-size: 20px;
+        --filter-text-size: 18px;
+        --body-text-size: 18px;
+    }
+
+    body { 
+        width: 85vw;
+        margin: 0 auto;
+    }
+
+    /* GENERAL STYLES */
+
+    .site-nav { 
+        margin: .75em 0em;
+    }
+
+    .filter-bar { 
+        position: fixed;
+        bottom: 1em;
+        left: 5vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+    
+    }
+
+    .flex-btn { 
+        margin-bottom: .5em;
+    }
+}
