--- a/main.css
+++ b/main.css
@@ -88,7 +88,8 @@ font-size: var(--filter-text-size);
 .filter-bar { 
     position: fixed;
     bottom: 1em;
-    left: 30vw;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-direction: row;
     justify-content: flex-start; 
@@ -223,7 +224,7 @@ font-size: var(--filter-text-size);
     .filter-bar { 
         position: fixed;
         bottom: 1em;
-        left: 20vw;
+        /* left: 20vw; */
         display: flex;
         flex-direction: column;
         justify-content: flex-start; 
@@ -254,7 +255,7 @@ font-size: var(--filter-text-size);
     .filter-bar { 
         position: fixed;
         bottom: 1em;
-        left: 5vw;
+        /* left: 5vw; */
         display: flex;
         flex-direction: column;
         justify-content: center; 
