--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* VARIABLES */
+/* ------------------------------------ VARIABLES ------------------------------------ */
 :root {
     --black: #000000; 
     --white: #ffffff;
@@ -24,7 +24,7 @@
 }
 
 
-/* SITWIDE */
+/* ------------------------------------ SITWIDE BASICS ------------------------------------ */
 body {
     width: 90vw;
     margin: 0 auto;
@@ -32,7 +32,9 @@ body {
 }
 
 
-/* TYPOGRAPHY */
+
+
+/* ------------------------------------ TYPOGRAPHY ------------------------------------ */
 
 .header { 
 font-family: shift, serif;
@@ -75,7 +77,7 @@ font-size: var(--filter-text-size);
 
 
 
-/* GENERAL STYLES */
+/* ------------------------------------ GENERAL STYLES ------------------------------------ */
 
 .site-nav { 
     margin: 1em 0em;
@@ -110,7 +112,7 @@ font-size: var(--filter-text-size);
 }
 
 
-/* FILTER BUTTONS AND HOVER */
+/* ------------------------------------ FILTER BUTTONS AND HOVER ------------------------------------ */
 
 .info-btn { 
     padding: .35em .75em;
@@ -188,11 +190,11 @@ font-size: var(--filter-text-size);
 }
 
 
-/* UTILITIES */
+/* ------------------------------------ UTILITIES ------------------------------------ */
 
 
 
-/* TREE SPECIES COLORS */
+/* ------------------------------------ TREE SPECIES COLORS ------------------------------------ */
 
 .pin-oak { 
     color: blue;
@@ -219,10 +221,17 @@ font-size: var(--filter-text-size);
 }
 
 
-/* ANIMATIONS */
+/* ------------------------------------ ANIMATIONS ------------------------------------ */
 
 
-/* MEDIA QUERIES / BREAKPOINTS */
+
+
+
+
+
+
+
+/* ------------------------------------ MEDIA QUERIES/ BREAKPOINTS ------------------------------------ */
 
 @media (max-width: 768px) {
 
