[css] deleted non-synonymous numbering

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
     --middle-grey: #888888;
     --light-grey: #D0D0D0;
     
-    --native-one: #01AF5A;
+    /* --native-one: #01AF5A;
     --native-two: #C9E518;
     --native-three: #EBEE6D;
     --native-four: #6AFBA4;
@@ -16,7 +16,6 @@
     --non-one: #315B51;
     --non-two: #4C7345;
     --non-three: #758C6A;
-    --non-four: #758C6A; 
 
     --header-text-size: 24px;
     --filter-text-size: 18px;
