--- a/main.css
+++ b/main.css
@@ -16,6 +16,71 @@
     --non-one: #315B51;
     --non-two: #4C7345;
     --non-three: #758C6A;
+    --non-four: #758C6A;  */
+
+    --red-maple: #2C4A43; 
+    --river-birch: #005E2B;
+    --honeylocust: #143514; 
+    --kentucky-coffeetree: #428400;
+    --sweetgum: #52762F;
+    --tulip-poplar: #1D6249;
+    --blackgum: #415C1E;
+    --sawtooth-oak: #3D4A08; 
+    --swamp-white-oak: #325F1E;
+    --scarlet: #70903C; 
+    --shingle-oak: #4C7345; 
+    --bur-oak: #327B10;
+    --willow-oak: #004006;
+    --american-linden: #697A02;
+    --littleleaf-linden: #3F4420; 
+    --silver-linden: #707649; 
+    --american-elm: #758C6A; 
+    --american-hornbeam: #394026; 
+    --black-oak: #21590D; 
+    --schumard-oak: #145033;
+    --bald-cypress: #293A18; 
+    --pin-oak: #2B4D32;
+
+
+    --turkish-hazelnut: #2ADB31;
+    --hardy-rubber-tree: #B3ED39;
+    --european-beech: #D5F21F;
+    --ginkgo: #ACEB44;
+    --london-planetree: #02E34F;
+    --sophora: #00CE78; 
+    --chinese-elm: #0AFA5C;
+    --japanese-zelkova: #0CF090;
+    --red-horse-chestnut: #DBFF00;
+    --european-hornbeam: #80FF00;
+    --japanese-hornbeam: #00FFA3;
+    --kentucky-yellowwood: #6AFBA4;
+    --golden-raintree: #5DD8B3;
+    --amur-maackia: #00CF08;
+    --persian-ironwood: #C9E518;
+    --hedge-maple: #EBEE6D;
+    --amur-maple: #01AF5A;
+    --paperbark-maple: #00FF19;
+    --tartar-maple: #20E0A6;
+    --shantung-maple: #20E084;
+    --serviceberry: #6BEE90;
+    --oklahoma-redbud: #B3ECB2;
+    --chinese-fringetree: #76DAA4;
+    --kousa-dogwood: #5CE05A;
+    --cornelian-cherry: #00FF75;
+    --cockspur-hawthorn: #91FF8E;
+    --crab-apple: #B0FF62;
+    --purple-leaf-plum: #93FF26;
+    --japanese-tree-lilac: #D8FAA0;
+    --chinese-tree-lilac: #CDFF7A; 
+    --callery-pear: #14B87D; 
+    
+
+
+
+
+
+
+
 
     --header-text-size: 24px;
     --filter-text-size: 18px;
