--- a/main.css
+++ b/main.css
@@ -144,7 +144,7 @@ font-size: var(--body-text-size);
 /* ------------------------------------ GENERAL STYLES ------------------------------------ */
 
 .site-nav { 
-    margin: 1em 0em;
+    margin: 1.5em 0em;
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -262,20 +262,23 @@ font-size: var(--body-text-size);
     flex-direction: row;
     flex-wrap: wrap;
     /* gap: 1em; */
+    margin-top: 7.5em;
 
 }
 
 .viz-container { 
     display: flex;
     flex-direction: column;
-    width: 42.5vw;
-    margin: .45em .1em;
+    width: 44.5vw;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .tree-container { 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-top: .5em;
     /* max-width: 42.5vw;
     margin: .45em .1em; */
 
@@ -509,8 +512,9 @@ font-size: var(--body-text-size);
     background-color: var(--callery-pear);
 }
 
-
-
+.tulip-poplar {
+    background-color: var(--tulip-poplar);
+}
 
 
 /* ------------------------------------ ANIMATIONS ------------------------------------ */
