--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-/* ------------------------------------ VARIABLES ------------------------------------ */
+/* #region ------------------------------------ ROOT VARIABLES  ------------------------------------ */
+
 :root {
     --black: #000000; 
     --white: #ffffff;
@@ -87,18 +88,20 @@
     --body-text-size: 16px;
 }
 
+/* #endregion */
 
-/* ------------------------------------ SITWIDE BASICS ------------------------------------ */
+
+/* #region ------------------------------------ SITWIDE BASICS ------------------------------------ */
+
 body {
     width: 90vw;
     margin: 0 auto;
     background-color: var(--light-white);
 }
+/* #endregion */
 
 
-
-
-/* ------------------------------------ TYPOGRAPHY ------------------------------------ */
+/* #region ------------------------------------ TYPOGRAPHY ------------------------------------  */
 
 .header { 
 font-family: shift, serif;
@@ -138,10 +141,10 @@ letter-spacing: .02em;
 font-size: var(--body-text-size);
 }
 
+/* #endregion */
 
 
-
-/* ------------------------------------ GENERAL STYLES ------------------------------------ */
+/* #region ------------------------------------ GENERAL STYLES ------------------------------------ */
 
 .site-nav { 
     margin: 1.5em 0em;
@@ -175,9 +178,11 @@ font-size: var(--body-text-size);
 
 }
 
+/* #endregion */
 
 
-/* ------------------------------------ FILTER BUTTONS AND HOVER ------------------------------------ */
+/* #region --------------------------------- FILTER BUTTONS AND HOVER ---------------------------------*/
+
 
 .info-btn { 
     padding: .35em .75em;
@@ -210,6 +215,7 @@ font-size: var(--body-text-size);
     
 }
 
+
 .native-filter-btn {
     margin: 0 .35em;
     padding: .35em .75em;
@@ -236,7 +242,7 @@ font-size: var(--body-text-size);
 	will-change: transform;
 }
 
-.filter-btn:hover { 
+.filter-btn:hover  .filter-active-btn:hover { 
     border: var(--light-white) solid .075em;
     background-color: var(--light-grey);
     cursor: pointer;
@@ -254,8 +260,10 @@ font-size: var(--body-text-size);
     cursor: pointer;
 }
 
+/* #endregion */
 
-/* ------------------------------------ VISUALISATION STYLING ------------------------------------ */
+
+/* #region ------------------------------------ VISUALISATION STYLING ------------------------------------ */
 
 #container { 
     display: flex;
@@ -272,37 +280,36 @@ font-size: var(--body-text-size);
     width: 44.5vw;
     margin-top: 2em;
     margin-bottom: 2em;
+    margin-right: .45em;
 }
 
 .tree-container { 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: .5em;
+    margin-top: .25em;
     /* max-width: 42.5vw;
     margin: .45em .1em; */
 
 }
 
-.box { 
-    display: inline-block;
-    background-color: var(--native-two);
-    padding: 10px;
-    margin: .025em;
-}
-
-
-
-
-/* ------------------------------------ TREE SPECIES COLORS ------------------------------------ */
-
-
-
 .tiny-box {
     display: inline-block;
-    padding: 10px;
+    padding: .5em;
     margin: .025em;
 }
+
+/* #endregion */
+
+
+/* #region ------------------------------------  TREE SPECIES COLORS ------------------------------------*/
+
+
+
+.pin-oak {
+    background-color: var(--pin-oak);
+}
+
 
 .pin-oak {
     background-color: var(--pin-oak);
@@ -516,18 +523,12 @@ font-size: var(--body-text-size);
     background-color: var(--tulip-poplar);
 }
 
-
-/* ------------------------------------ ANIMATIONS ------------------------------------ */
-
+/* #endregion */
 
 
+/* #region ------------------------------------ MEDIA QUERIES ------------------------------------ */
 
 
-
-
-
-
-/* ------------------------------------ MEDIA QUERIES/ BREAKPOINTS ------------------------------------ */
 
 @media (max-width: 768px) {
 
@@ -594,3 +595,6 @@ font-size: var(--body-text-size);
     }
 
 }
+
+
+/* #endregion */
