--- a/main.css
+++ b/main.css
@@ -394,7 +394,7 @@ border-bottom: .1em black solid;
 }
 
 .info-img {
-    background-color: grey;
+    /* background-color: grey; */
     width: 30%;
     padding: .5em;
     border-radius: .25em;
