added new native species css root

--- a/main.css
+++ b/main.css
@@ -103,7 +103,24 @@
     --blue-spruce: #3AB600;
     --heaven: #00B649;
 
-
+    --ash: #2B8F41;
+    --green-ash: #087B21;
+    --white-ash: #3B7A49;
+    --chokecherry: #7B903C;
+    --douglas-fir: #1A473C;
+    --eastern-redcedar: #85947F;
+    --american-elm: #76815E;
+    --hickory: #195640;
+    --holly: #8C9F13;
+    --american-larch: #729F13;
+    --magnolia: #64980F;
+    --cucumber-magnolia: #7F920C;
+    --mulberry: #48622E;
+    --padogda-dogwood: #678847;
+    --white-pine: #81B480;
+    --red-pine: #98B054;
+    --spruce: #959025;
+    --walnut: #A9A655;
 
 
 
