--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ a {
   letter-spacing: .02em;
   font-size: calc(var(--filter-text-size) * 2);
   z-index: 9;
-  color: var(--light-white);
+  /* color: var(--light-white); */
   position: absolute !important;
   cursor: crosshair;
 }
@@ -176,7 +176,7 @@ a {
   letter-spacing: .02em;
   font-size: calc(var(--filter-text-size) * 2);
   z-index: 9;
-  color: var(--light-white);
+  color: var(--white);
   position: absolute !important;
   cursor: crosshair;
   left: 0;
